--- a/Ansible/inventory.cfg
+++ b/Ansible/inventory.cfg
@@ -1,2 +1,3 @@
+[servers]
 ansible-worker-1 ansible_host=<Public IP of worker 1> ansible_connection=ssh ansible_user=ubuntu
 ansible-worker-2 ansible_host=<Public IP of worker 2> ansible_connection=ssh ansible_user=ubuntu
