--- a/Ansible/playbook.yml
+++ b/Ansible/playbook.yml
@@ -1,11 +1,19 @@
-- name: install docker on worker 1
-  hosts: ansible_worker_1
+- name: install python pip modules on worker nodes
+  hosts: servers
+  become: true
+  roles:
+  - install_python-pip
+
+- name: install docker on worker nodes
+  hosts: servers
   become: true
   roles:
   - install_docker
 
-- name: install docker on worker 2
-  hosts: ansible_worker_2
+- name: run nginx on worker nodes
+  hosts: servers
   become: true
   roles:
-  - install_docker
+  - run_nginx
+
+  
