--- a/Ansible/inventory.cfg
+++ b/Ansible/inventory.cfg
@@ -1,3 +1,3 @@
 [servers]
-ansible_worker_1 ansible_host=<Public IP of worker 1> ansible_connection=ssh ansible_user=ubuntu
-ansible_worker_2 ansible_host=<Public IP of worker 2> ansible_connection=ssh ansible_user=ubuntu
+ansible_worker_1 ansible_host=<public IP of ansible_worker_1> ansible_connection=ssh ansible_user=ubuntu
+ansible_worker_2 ansible_host=<public IP of ansible_worker_2> ansible_connection=ssh ansible_user=ubuntu
